wrapping up work on the project

--- a/IMDB_pro_parser.ipynb
+++ b/IMDB_pro_parser.ipynb
@@ -45,17 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "resp = requests.get('https://pro.imdb.com/title/tt10042678/boxoffice')\n",
-    "resp1 = !curl 'https://pro.imdb.com/title/tt10042678/boxoffice' -H 'Connection: keep-alive' -H 'Cache-Control: max-age=0' -H 'Upgrade-Insecure-Requests: 1' -H 'User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.163 Safari/537.36' -H 'Sec-Fetch-Dest: document' -H 'Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9' -H 'Sec-Fetch-Site: same-origin' -H 'Sec-Fetch-Mode: navigate' -H 'Sec-Fetch-User: ?1' -H 'Referer: https://pro.imdb.com/title/tt7286456/?ref_=instant_tt_1&q=Joker' -H 'Accept-Language: en-US,en;q=0.9' -H 'Cookie: session-id=138-1311213-4138762; adblk=adblk_no; ubid-main=131-2177923-5330445; session-id-time=2218844129l; session-token=\"7lKxCjYEZ3V9hT9qJpfpgzObgYfHO6goxE1Q9741byay03eiMBa8t+qvcSZbvxeixK94R70vB2mt9Q8HYxhqXE6zNUSB0nhWE6q0dzSK5HZ79APwBN3s40WHZPKStFJBecpQANVgmGpOJ2G3TgwlbbvIxUyS8znm0/DPzLKlHeXY4IgU8PrHoHgHnE+j22XYy65L6v50w0MOV3YR63jofTTxD3PIju1L8U7uQDvCfGQ=\"; x-main=\"IS86HKXSJMigI0RnIigNqWd@Pu8ZQWgbXHTCS5NC44TGbsoydTDB4J3y0KW4qQJw\"; at-main=Atza|IwEBILUkej479bl-hN19LhAyANxzITDWvKeBnZnnNNWk10j0SijTTrcP1xHYude5_tVJrzPsq30ehR12BnByawJoVpMhpgQ_hNpe0PYjxNHJTAQIAjOTF1wpOsTVFURmn8zA9cCV43yBuMIWlH9cQeyn7lV7Kdd47Hn--VPkHz_W88D4CZ-L1N-H-c-y65FUxELVH6R6EPnh830ssfLXG5L864QRO9hBDwKchx_d6hepwITlwuO8qetimWYabwo8Hty6QX5nZuKY2HNpCWmsakxByc50NIAp7Uy7_bZkvZW2sN8dK9kON4xPKIygVHhMWJQ6wh2-d0DykEh4BKAnSs8dTOaGBf2Wq33d5V4XKmz9RPhyup41DXR5DFVPQojnJoMGVNVo1hd_Xan63I94uYk1JEMN; sess-at-main=\"p9whlqJpRA5/kki0a+qwvIksIhZyceM2oTm2NUGUstA=\"; uu=BCYoQbsIiwfBoS5Z-9VBEM4GQeZlJd-x0dsY76F-NJiyuSyqzmSEMKbVSar_-kScSNRzLG9PNA9I%0D%0Ajdjov4ijeWrg0KYq7RquhDNrANLf2r_CKRWG40LVJlIVEtUtjfN7vlSPexThCyrlRCA6MaZXDAXU%0D%0APJiwN-Oy2Uileof_lGTBYNE%0D%0A; pa=BCYo5O3AftOw_UMyDZBOrkb5nNPu-MMicHEKRBry99NXBnJRqeW3prdQxa0PDs0tVA8QWusbH7tZ%0D%0Anraln_N9jpUhsHsZ_jxhsmPTLpuksiUytkmvL8ZfDM5RxRZzJUpLkDX6%0D%0A; csm-hit=tb:FVQ9NP1114J2DT3PZ86C+s-ARJ3QBPRN01FYACFD0CG|1588180107186&t:1588180107194&adb:adblk_no' --compressed"
+    "resp1 = !curl 'https://pro.imdb.com/title/tt10980000/boxoffice' -H 'Connection: keep-alive' -H 'Cache-Control: max-age=0' -H 'Upgrade-Insecure-Requests: 1' -H 'User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.163 Safari/537.36' -H 'Sec-Fetch-Dest: document' -H 'Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9' -H 'Sec-Fetch-Site: same-origin' -H 'Sec-Fetch-Mode: navigate' -H 'Sec-Fetch-User: ?1' -H 'Referer: https://pro.imdb.com/title/tt7286456/?ref_=instant_tt_1&q=Joker' -H 'Accept-Language: en-US,en;q=0.9' -H 'Cookie: session-id=138-1311213-4138762; adblk=adblk_no; ubid-main=131-2177923-5330445; session-id-time=2218844129l; session-token=\"7lKxCjYEZ3V9hT9qJpfpgzObgYfHO6goxE1Q9741byay03eiMBa8t+qvcSZbvxeixK94R70vB2mt9Q8HYxhqXE6zNUSB0nhWE6q0dzSK5HZ79APwBN3s40WHZPKStFJBecpQANVgmGpOJ2G3TgwlbbvIxUyS8znm0/DPzLKlHeXY4IgU8PrHoHgHnE+j22XYy65L6v50w0MOV3YR63jofTTxD3PIju1L8U7uQDvCfGQ=\"; x-main=\"IS86HKXSJMigI0RnIigNqWd@Pu8ZQWgbXHTCS5NC44TGbsoydTDB4J3y0KW4qQJw\"; at-main=Atza|IwEBILUkej479bl-hN19LhAyANxzITDWvKeBnZnnNNWk10j0SijTTrcP1xHYude5_tVJrzPsq30ehR12BnByawJoVpMhpgQ_hNpe0PYjxNHJTAQIAjOTF1wpOsTVFURmn8zA9cCV43yBuMIWlH9cQeyn7lV7Kdd47Hn--VPkHz_W88D4CZ-L1N-H-c-y65FUxELVH6R6EPnh830ssfLXG5L864QRO9hBDwKchx_d6hepwITlwuO8qetimWYabwo8Hty6QX5nZuKY2HNpCWmsakxByc50NIAp7Uy7_bZkvZW2sN8dK9kON4xPKIygVHhMWJQ6wh2-d0DykEh4BKAnSs8dTOaGBf2Wq33d5V4XKmz9RPhyup41DXR5DFVPQojnJoMGVNVo1hd_Xan63I94uYk1JEMN; sess-at-main=\"p9whlqJpRA5/kki0a+qwvIksIhZyceM2oTm2NUGUstA=\"; uu=BCYoQbsIiwfBoS5Z-9VBEM4GQeZlJd-x0dsY76F-NJiyuSyqzmSEMKbVSar_-kScSNRzLG9PNA9I%0D%0Ajdjov4ijeWrg0KYq7RquhDNrANLf2r_CKRWG40LVJlIVEtUtjfN7vlSPexThCyrlRCA6MaZXDAXU%0D%0APJiwN-Oy2Uileof_lGTBYNE%0D%0A; pa=BCYo5O3AftOw_UMyDZBOrkb5nNPu-MMicHEKRBry99NXBnJRqeW3prdQxa0PDs0tVA8QWusbH7tZ%0D%0Anraln_N9jpUhsHsZ_jxhsmPTLpuksiUytkmvL8ZfDM5RxRZzJUpLkDX6%0D%0A; csm-hit=tb:FVQ9NP1114J2DT3PZ86C+s-ARJ3QBPRN01FYACFD0CG|1588180107186&t:1588180107194&adb:adblk_no' --compressed\n",
+    "resp2 = !curl 'https://pro.imdb.com/name/nm0001570' -H 'Connection: keep-alive' -H 'Cache-Control: max-age=0' -H 'Upgrade-Insecure-Requests: 1' -H 'User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.163 Safari/537.36' -H 'Sec-Fetch-Dest: document' -H 'Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9' -H 'Sec-Fetch-Site: same-origin' -H 'Sec-Fetch-Mode: navigate' -H 'Sec-Fetch-User: ?1' -H 'Referer: https://pro.imdb.com/title/tt7286456/?ref_=instant_tt_1&q=Joker' -H 'Accept-Language: en-US,en;q=0.9' -H 'Cookie: session-id=138-1311213-4138762; adblk=adblk_no; ubid-main=131-2177923-5330445; session-id-time=2218844129l; session-token=\"7lKxCjYEZ3V9hT9qJpfpgzObgYfHO6goxE1Q9741byay03eiMBa8t+qvcSZbvxeixK94R70vB2mt9Q8HYxhqXE6zNUSB0nhWE6q0dzSK5HZ79APwBN3s40WHZPKStFJBecpQANVgmGpOJ2G3TgwlbbvIxUyS8znm0/DPzLKlHeXY4IgU8PrHoHgHnE+j22XYy65L6v50w0MOV3YR63jofTTxD3PIju1L8U7uQDvCfGQ=\"; x-main=\"IS86HKXSJMigI0RnIigNqWd@Pu8ZQWgbXHTCS5NC44TGbsoydTDB4J3y0KW4qQJw\"; at-main=Atza|IwEBILUkej479bl-hN19LhAyANxzITDWvKeBnZnnNNWk10j0SijTTrcP1xHYude5_tVJrzPsq30ehR12BnByawJoVpMhpgQ_hNpe0PYjxNHJTAQIAjOTF1wpOsTVFURmn8zA9cCV43yBuMIWlH9cQeyn7lV7Kdd47Hn--VPkHz_W88D4CZ-L1N-H-c-y65FUxELVH6R6EPnh830ssfLXG5L864QRO9hBDwKchx_d6hepwITlwuO8qetimWYabwo8Hty6QX5nZuKY2HNpCWmsakxByc50NIAp7Uy7_bZkvZW2sN8dK9kON4xPKIygVHhMWJQ6wh2-d0DykEh4BKAnSs8dTOaGBf2Wq33d5V4XKmz9RPhyup41DXR5DFVPQojnJoMGVNVo1hd_Xan63I94uYk1JEMN; sess-at-main=\"p9whlqJpRA5/kki0a+qwvIksIhZyceM2oTm2NUGUstA=\"; uu=BCYoQbsIiwfBoS5Z-9VBEM4GQeZlJd-x0dsY76F-NJiyuSyqzmSEMKbVSar_-kScSNRzLG9PNA9I%0D%0Ajdjov4ijeWrg0KYq7RquhDNrANLf2r_CKRWG40LVJlIVEtUtjfN7vlSPexThCyrlRCA6MaZXDAXU%0D%0APJiwN-Oy2Uileof_lGTBYNE%0D%0A; pa=BCYo5O3AftOw_UMyDZBOrkb5nNPu-MMicHEKRBry99NXBnJRqeW3prdQxa0PDs0tVA8QWusbH7tZ%0D%0Anraln_N9jpUhsHsZ_jxhsmPTLpuksiUytkmvL8ZfDM5RxRZzJUpLkDX6%0D%0A; csm-hit=tb:FVQ9NP1114J2DT3PZ86C+s-ARJ3QBPRN01FYACFD0CG|1588180107186&t:1588180107194&adb:adblk_no' --compressed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -64,33 +65,59 @@
        "str"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(resp1.nlstr)"
+    "type(resp2.nlstr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "soup = BeautifulSoup(resp.content, \"html.parser\")\n",
-    "soup1 = BeautifulSoup(resp1.nlstr, \"html.parser\")"
+    "soup1 = BeautifulSoup(resp1.nlstr, \"html.parser\")\n",
+    "soup2 = BeautifulSoup(resp2.nlstr, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "640\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(soup2.prettify())\n",
+    "div = soup2.find(\"div\", {\"id\": \"popularity_widget\"})\n",
+    "answer = div.find(\"a\", {\"class\": \"a-size- a-align- a-link- clickable_share_link\"})\n",
+    "print(int(answer.text.replace('\\n', '').replace(' ', '').replace(',', '')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#print(soup1.prettify())"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1171,22 +1198,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(\"say 'buddha strap!'\")\n",
+    "import json\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_director_data(title_code):\n",
+    "    #IMDB api top-crew\n",
+    "    url = \"https://imdb8.p.rapidapi.com/title/get-top-crew\"\n",
+    "    querystring = {\"tconst\":title_code}\n",
+    "    headers = {\n",
+    "        'x-rapidapi-host': \"imdb8.p.rapidapi.com\",\n",
+    "        'x-rapidapi-key': \"cb8ae0789fmshd5f578d8c964ca6p18b81fjsn3f8341b9ef41\"\n",
+    "        }\n",
+    "    response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
+    "    crew_json = json.loads(response.text)\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    dir_code = crew_json['directors'][0]['id']\n",
+    "    dir_name = crew_json['directors'][0]['name']\n",
+    "    print(dir_code, dir_name)\n",
+    "\n",
+    "    #scrape IMDB PRO\n",
+    "    url = 'https://pro.imdb.com'+dir_code\n",
+    "    headers = {\n",
+    "        'Cookie':'''session-id=138-1311213-4138762; adblk=adblk_no; ubid-main=131-2177923-5330445; session-id-time=2218844129l; x-main=\"IS86HKXSJMigI0RnIigNqWd@Pu8ZQWgbXHTCS5NC44TGbsoydTDB4J3y0KW4qQJw\"; at-main=Atza|IwEBILUkej479bl-hN19LhAyANxzITDWvKeBnZnnNNWk10j0SijTTrcP1xHYude5_tVJrzPsq30ehR12BnByawJoVpMhpgQ_hNpe0PYjxNHJTAQIAjOTF1wpOsTVFURmn8zA9cCV43yBuMIWlH9cQeyn7lV7Kdd47Hn--VPkHz_W88D4CZ-L1N-H-c-y65FUxELVH6R6EPnh830ssfLXG5L864QRO9hBDwKchx_d6hepwITlwuO8qetimWYabwo8Hty6QX5nZuKY2HNpCWmsakxByc50NIAp7Uy7_bZkvZW2sN8dK9kON4xPKIygVHhMWJQ6wh2-d0DykEh4BKAnSs8dTOaGBf2Wq33d5V4XKmz9RPhyup41DXR5DFVPQojnJoMGVNVo1hd_Xan63I94uYk1JEMN; sess-at-main=\"p9whlqJpRA5/kki0a+qwvIksIhZyceM2oTm2NUGUstA=\"; uu=BCYoQbsIiwfBoS5Z-9VBEM4GQeZlJd-x0dsY76F-NJiyuSyqzmSEMKbVSar_-kScSNRzLG9PNA9I%0D%0Ajdjov4ijeWrg0KYq7RquhDNrANLf2r_CKRWG40LVJlIVEtUtjfN7vlSPexThCyrlRCA6MaZXDAXU%0D%0APJiwN-Oy2Uileof_lGTBYNE%0D%0A; pa=BCYo5O3AftOw_UMyDZBOrkb5nNPu-MMicHEKRBry99NXBnJRqeW3prdQxa0PDs0tVA8QWusbH7tZ%0D%0Anraln_N9jpUhsHsZ_jxhsmPTLpuksiUytkmvL8ZfDM5RxRZzJUpLkDX6%0D%0A; session-token=\"FGBlsQXWFfNa1aXpisRWiZ24Zh7zfYgzF86EWr2infSQ/A6LyfZB++iPHpTBeYr2C2ZzH/C96D7YqEVAjt91KwKNDfhgKCBhgo3cwIzkZ9A2ZqntW/EE9MsAa8/KfK7XLvtj4lUy/nEmiyLVq9Gc2U6Exc1kovQN4H5GmkruH/ywN/ZwSmxBk1VEIqNKeSVbDDnA8JE2OJXuKQNPFsmu5kLk62fEK2cMJMb1pQZw6rU=\"; csm-hit=tb:FVQ9NP1114J2DT3PZ86C+s-WXASZQ2TS1F9RJ5CAPX5|1588207251592&t:1588207251592&adb:adblk_no\"'''\n",
+    "    }\n",
+    "    resp = requests.request(\"GET\", url, headers=headers)\n",
+    "    soup = BeautifulSoup(resp.content, \"html.parser\")\n",
+    "    div = soup.find(\"div\", {\"id\": \"popularity_widget\"})\n",
+    "    act = div.find(\"a\", {\"class\": \"a-size- a-align- a-link- clickable_share_link\"})\n",
+    "    pop = int(act.text.replace('\\n', '').replace(' ', '').replace(',', ''))\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "    #construct the dataframe\n",
+    "    cols = ['director','name','populairty']\n",
+    "    df = pd.DataFrame(columns=cols)\n",
+    "    df.loc[0] = [dir_code, dir_name, pop]\n",
+    "\n",
+    "    #return the DF\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-136-f267ec3a93cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfetch_director_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tt10980000'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-127-4cb2db9e4a42>\u001b[0m in \u001b[0;36mfetch_director_data\u001b[0;34m(title_code)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mdir_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcrew_json\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'directors'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mdir_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcrew_json\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'directors'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
-    "os.system(\"say 'buddha strap!'\")"
+    "fetch_director_data('tt10980000')"
    ]
   },
   {
