--- a/IMDB_api.ipynb
+++ b/IMDB_api.ipynb
@@ -137,19 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Brian De Palma\n"
+      "/name/nm0000361/\n"
      ]
     }
    ],
    "source": [
-    "print(crew_json['directors'][0]['name'])"
+    "print(crew_json['directors'][0]['id'])"
    ]
   },
   {
@@ -225,123 +225,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>titleId</th>\n",
-       "      <th>ordering</th>\n",
-       "      <th>title</th>\n",
-       "      <th>region</th>\n",
-       "      <th>language</th>\n",
-       "      <th>types</th>\n",
-       "      <th>attributes</th>\n",
-       "      <th>isOriginalTitle</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tt0000001</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Карменсіта</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>imdbDisplay</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tt0000001</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Carmencita</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>literal title</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tt0000001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Carmencita - spanyol tánc</td>\n",
-       "      <td>HU</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>imdbDisplay</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>tt0000001</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Καρμενσίτα</td>\n",
-       "      <td>GR</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>imdbDisplay</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tt0000001</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Карменсита</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>imdbDisplay</td>\n",
-       "      <td>\\N</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     titleId  ordering                      title region language  \\\n",
-       "0  tt0000001         1                 Карменсіта     UA       \\N   \n",
-       "1  tt0000001         2                 Carmencita     DE       \\N   \n",
-       "2  tt0000001         3  Carmencita - spanyol tánc     HU       \\N   \n",
-       "3  tt0000001         4                 Καρμενσίτα     GR       \\N   \n",
-       "4  tt0000001         5                 Карменсита     RU       \\N   \n",
-       "\n",
-       "         types     attributes isOriginalTitle  \n",
-       "0  imdbDisplay             \\N               0  \n",
-       "1           \\N  literal title               0  \n",
-       "2  imdbDisplay             \\N               0  \n",
-       "3  imdbDisplay             \\N               0  \n",
-       "4  imdbDisplay             \\N               0  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21385781 entries, 0 to 21385780\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column           Dtype \n",
+      "---  ------           ----- \n",
+      " 0   titleId          object\n",
+      " 1   ordering         int64 \n",
+      " 2   title            object\n",
+      " 3   region           object\n",
+      " 4   language         object\n",
+      " 5   types            object\n",
+      " 6   attributes       object\n",
+      " 7   isOriginalTitle  object\n",
+      "dtypes: int64(1), object(7)\n",
+      "memory usage: 1.3+ GB\n"
+     ]
     }
    ],
    "source": [
-    "aka_df.head()"
+    "aka_df.info()"
    ]
   },
   {
