--- a/IMDB_pro_parser.ipynb
+++ b/IMDB_pro_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "str"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "640\n"
+      "673\n"
      ]
     }
    ],
@@ -107,17 +107,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Trending & News\\n\\n \\n STARmeter\\n\\n\\n\\n 673\\n\\n\\n News articles\\n \\n6,700 1 new article\\n\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div.text"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Trending & News\\n\\n \\n STARmeter\\n\\n\\n\\n 673\\n\\n\\n News articles\\n \\n6,700 1 new article\\n\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div.get_text()"
+   ]
   },
   {
    "cell_type": "code",
