updating flask work to github

--- a/src/IMDB_api.ipynb
+++ b/src/IMDB_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,17 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/owenmorris/anaconda/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (5) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n",
+      "/Users/owenmorris/anaconda/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (7) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "titles_df = pd.read_csv('data/title.basics.tsv', sep='\\t')\n",
-    "aka_df = pd.read_csv('data/title.akas.tsv', sep='\\t')"
+    "titles_df = pd.read_csv('../data/title.basics.tsv', sep='\\t')\n",
+    "aka_df = pd.read_csv('../data/title.akas.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,44 +267,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['UA', 'DE', 'HU', 'GR', 'RU', 'US', '\\\\N', 'JP', 'FR', 'RO', 'GB',\n",
-       "       'PT', 'ES', 'UY', 'IT', 'FI', 'RS', 'PL', 'AR', 'BR', 'XWW', 'DK',\n",
-       "       'TR', 'XEU', 'SK', 'CZ', 'SE', 'MX', 'XYU', 'AT', 'VE', 'CSHH',\n",
-       "       'SI', 'AU', 'CA', 'NL', 'LT', 'NO', 'IR', 'CO', 'BG', 'TW', 'BE',\n",
-       "       'IN', 'DZ', 'CH', 'NZ', 'BF', 'XWG', 'VN', 'XSA', 'SUHH', 'EE',\n",
-       "       'IS', 'HR', 'DDDE', 'XKO', 'CL', 'EG', 'HK', 'BY', 'GE', 'BA',\n",
-       "       'PE', 'PA', 'CN', 'TJ', 'XSI', 'YUCS', 'IE', 'IL', 'CU', 'AL',\n",
-       "       'BO', 'ZA', 'KR', 'MY', 'SG', 'BUMM', 'XPI', 'BJ', 'PR', 'CM',\n",
-       "       'AZ', 'TH', 'DO', 'LV', 'EC', 'MA', 'GL', 'LI', 'LU', 'PH', 'ID',\n",
-       "       'PY', 'MZ', 'BM', 'JM', 'MD', 'CR', 'GT', 'LB', 'IQ', 'TM', 'MK',\n",
-       "       'TN', 'NG', 'HT', 'SN', 'GH', 'CI', 'JO', 'KG', 'PK', 'LK', 'NE',\n",
-       "       'GN', 'VDVN', 'TD', 'SO', 'SD', 'MC', 'CG', 'TT', 'GA', 'BS', 'LY',\n",
-       "       'SY', 'AO', 'KH', 'SV', 'MR', 'AF', 'MG', 'ML', 'GY', 'CY', 'ET',\n",
-       "       'GU', 'XAS', 'UZ', 'SR', 'MT', 'AM', 'TG', 'PG', 'MU', 'BI', 'CF',\n",
-       "       'NI', 'ZW', 'BD', 'ZM', 'GW', 'DJ', 'KP', 'RW', 'TZ', 'KZ', 'GI',\n",
-       "       'LA', 'SC', 'NP', 'GP', 'MN', 'SM', 'CD', 'CSXX', 'TO', 'AW', 'BT',\n",
-       "       'LS', 'HN', 'KE', 'MQ', 'KW', 'AD', 'SA', 'ZRCD', 'AE', 'PS', 'ER',\n",
-       "       nan, 'IM', 'XKV', 'BH', 'BB', 'BZ', 'CV', 'UG', 'AG', 'NU', 'OM',\n",
-       "       'QA', 'BW', 'SL', 'MO', 'LR', 'VC', 'AN', 'MV', 'YE', 'GM', 'KY',\n",
-       "       'PF', 'MM', 'ME', 'NC', 'DM', 'MP', 'FO', 'VA', 'GQ', 'FJ', 'SZ',\n",
-       "       'RE', 'EH', 'VG', 'LC', 'MW', 'BN', 'TL', 'MH', 'VI', 'XNA', 'GF',\n",
-       "       'VU', 'SH', 'MS', 'WS', 'TV', 'XAU', 'CK', 'KM', 'AQ', 'PW', 'NR',\n",
-       "       'GD', 'KN', 'AS', 'ST', 'SB', 'JE', 'KI', 'AI', 'TC'], dtype=object)"
+       "array(['\\\\N', 'ja', 'sv', 'en', 'tr', 'es', 'sr', 'cs', 'fa', 'fr', 'bg',\n",
+       "       'ca', 'nl', 'qbn', 'pt', 'ru', 'uk', 'qbp', 'ar', 'cmn', 'rn',\n",
+       "       'bs', 'de', 'hi', 'yi', 'qbo', 'ka', 'hr', 'sl', 'he', 'tg', 'sk',\n",
+       "       'kk', 'da', 'el', 'fi', 'it', 'gsw', 'yue', 'az', 'ms', 'pl', 'mr',\n",
+       "       'uz', 'gl', 'th', 'ta', 'eu', 'be', 'af', 'la', 'hy', 'ur', 'bn',\n",
+       "       'te', 'lt', 'mk', 'et', 'lv', 'gd', 'tl', 'cy', 'id', 'qal', 'gu',\n",
+       "       'ml', 'ro', 'hu', 'pa', 'kn', 'wo', 'no', 'is', 'sq', 'zh', 'ps',\n",
+       "       'nqo', 'sd', 'ga', 'xh', 'mi', 'zu', 'ku', 'rm', 'prs', 'ky', 'vi',\n",
+       "       'fro', 'ko', 'haw', 'mn', 'lo', 'my', 'am', 'qac', 'ne', 'myv',\n",
+       "       'br', 'iu', 'st', 'tn', 'cr'], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aka_df.region.unique()"
+    "aka_df.language.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6741016 entries, 0 to 6741015\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Dtype \n",
+      "---  ------          ----- \n",
+      " 0   tconst          object\n",
+      " 1   titleType       object\n",
+      " 2   primaryTitle    object\n",
+      " 3   originalTitle   object\n",
+      " 4   isAdult         int64 \n",
+      " 5   startYear       object\n",
+      " 6   endYear         object\n",
+      " 7   runtimeMinutes  object\n",
+      " 8   genres          object\n",
+      "dtypes: int64(1), object(8)\n",
+      "memory usage: 462.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "titles_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I'm coming back to get a list of english titles to train the neural network for title generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "english_df = aka_df[aka_df.language == 'en']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#english_df.title.to_csv('../data/titles_for_text_training.csv')"
    ]
   },
   {
@@ -542,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +718,7 @@
        "48       \\N           \\N                     \\N               0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
