updating data files

--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -1448,6 +1448,8 @@
     }
    ],
    "source": [
+    "#**** This section was used to locate actors not in the keys I'd mined up ***\n",
+    "\n",
     "len(np.array(actor_key['actor']))\n",
     "missing = []\n",
     "def find_missing_keys(key):\n",
@@ -1715,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2231,7 @@
        "4                    0                    0                    0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2240,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2264,6 +2266,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>budget</th>\n",
        "      <th>action</th>\n",
        "      <th>adventure</th>\n",
        "      <th>animated</th>\n",
@@ -2286,6 +2289,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>26000000.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2306,6 +2310,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>170000000.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2326,6 +2331,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>35000000.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2346,6 +2352,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>100000000.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2366,6 +2373,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>20000000.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2389,36 +2397,44 @@
        "</div>"
       ],
       "text/plain": [
-       "   action  adventure  animated  biography  drama  documentary  comedy  crime  \\\n",
-       "0       0          0         0          0      1            0       0      1   \n",
-       "1       1          1         0          0      0            0       0      0   \n",
-       "2       1          0         0          0      1            0       0      0   \n",
-       "3       1          1         0          0      0            0       1      0   \n",
-       "4       0          0         0          0      1            0       0      0   \n",
+       "        budget  action  adventure  animated  biography  drama  documentary  \\\n",
+       "0   26000000.0       0          0         0          0      1            0   \n",
+       "1  170000000.0       1          1         0          0      0            0   \n",
+       "2   35000000.0       1          0         0          0      1            0   \n",
+       "3  100000000.0       1          1         0          0      0            0   \n",
+       "4   20000000.0       0          0         0          0      1            0   \n",
        "\n",
-       "   fantasy  family  musical  horror  war  mystery  sci-fi  thriller  romance  \n",
-       "0        0       0        0       0    0        1       0         0        0  \n",
-       "1        0       0        0       0    0        0       1         1        0  \n",
-       "2        0       0        0       0    1        0       0         0        0  \n",
-       "3        1       0        0       0    0        0       0         0        0  \n",
-       "4        0       0        0       0    1        0       0         0        0  "
+       "   comedy  crime  fantasy  family  musical  horror  war  mystery  sci-fi  \\\n",
+       "0       0      1        0       0        0       0    0        1       0   \n",
+       "1       0      0        0       0        0       0    0        0       1   \n",
+       "2       0      0        0       0        0       0    1        0       0   \n",
+       "3       1      0        1       0        0       0    0        0       0   \n",
+       "4       0      0        0       0        0       0    1        0       0   \n",
+       "\n",
+       "   thriller  romance  \n",
+       "0         0        0  \n",
+       "1         1        0  \n",
+       "2         0        0  \n",
+       "3         0        0  \n",
+       "4         0        0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#pull the columns we want from the main DF\n",
-    "use_cols = using_df[['action','adventure','animated','biography','drama','documentary','comedy','crime','fantasy','family',\n",
-    "                 'musical','horror','war','mystery','sci-fi','thriller','romance']]\n",
+    "use_cols = using_df[['budget','action','adventure','animated','biography','drama','documentary',\n",
+    "                     'comedy','crime','fantasy','family','musical','horror','war','mystery',\n",
+    "                     'sci-fi','thriller','romance']]\n",
     "use_cols.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2462,15 +2478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE : 365752162642280.1\n",
-      "RMSE: 19124648.03969684\n"
+      "MSE : 246746175994829.66\n",
+      "RMSE: 15708156.352507753\n"
      ]
     }
    ],
@@ -2481,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2495,7 +2511,7 @@
        "                      random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2507,15 +2523,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE : 717146403213533.9\n",
-      "RMSE: 26779589.302555293\n"
+      "MSE : 442588125177407.4\n",
+      "RMSE: 21037778.522871833\n"
      ]
     }
    ],
@@ -2527,15 +2543,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE : 360001972153824.94\n",
-      "RMSE: 18973717.931755625\n"
+      "MSE : 271476525583944.4\n",
+      "RMSE: 16476544.71010061\n"
      ]
     }
    ],
@@ -2554,15 +2570,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE : 365356825178677.1\n",
-      "RMSE: 19114309.4350457\n"
+      "MSE : 251231481762925.22\n",
+      "RMSE: 15850283.33383745\n"
      ]
     }
    ],
@@ -2773,13 +2789,7 @@
       "2134/2134 [==============================] - 0s 110us/sample - loss: 518664931657599.4375 - mae: 6449871.5000 - mse: 518664881176576.0000 - val_loss: 180153030332037.3750 - val_mae: 4942889.0000 - val_mse: 180153040764928.0000\n",
       "Epoch 33/50\n",
       "2134/2134 [==============================] - 0s 107us/sample - loss: 518664937844885.7500 - mae: 6449871.0000 - mse: 518664981839872.0000 - val_loss: 180153029909082.3438 - val_mae: 4942889.0000 - val_mse: 180153023987712.0000\n",
-      "Epoch 34/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 34/50\n",
       "2134/2134 [==============================] - 0s 102us/sample - loss: 518664942388059.8750 - mae: 6449872.0000 - mse: 518664948285440.0000 - val_loss: 180153028640217.2812 - val_mae: 4942889.0000 - val_mse: 180153040764928.0000\n",
       "Epoch 35/50\n",
       "2134/2134 [==============================] - 0s 103us/sample - loss: 518664933823542.6875 - mae: 6449869.5000 - mse: 518664914731008.0000 - val_loss: 180153034279617.6250 - val_mae: 4942889.0000 - val_mse: 180153057542144.0000\n",
